<?xml version="1.0"?>
<package format="2">
  <name>rc_genicam_camera</name>
  <version>1.2.3</version>
  <description>
    The rc_genicam_camera provides images from a GenICam compatible camera.
  </description>

  <maintainer email="heiko.hirschmueller@roboception.de">Heiko Hirschmueller</maintainer>
  <license>BSD</license>

  <author email="heiko.hirschmueller@roboception.de">Heiko Hirschmueller</author>

  <!-- system dependencies -->
  <depend version_gte="2.0.3">rc_genicam_api</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- depend is a shorthand for build_depend, build_export_depend and exec_depend -->
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>
  <!-- <depend>diagnostic_msgs</depend> -->

  <doc_depend>doxygen</doc_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/rc_genicam_camera_nodelet.xml"/>
  </export>
</package>
