<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_genicam_camera</name>
  <version>1.3.0</version>
  <description>
    The rc_genicam_camera provides images from a GenICam compatible camera.
  </description>

  <maintainer email="felix.ruess@roboception.de">Felix Ruess</maintainer>
  <maintainer email="heiko.hirschmueller@roboception.de">Heiko Hirschmueller</maintainer>
  <license>BSD</license>

  <author email="heiko.hirschmueller@roboception.de">Heiko Hirschmueller</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- system dependencies -->
  <!-- <depend version_gte="2.0.3">rc_genicam_api</depend> -->
  <depend>rc_genicam_api</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>rc_genicam_camera_interfaces</depend>
  <!-- <depend>dynamic_reconfigure</depend> -->
  <!-- <depend>diagnostic_updater</depend> -->
  <!-- <depend>diagnostic_msgs</depend> -->

  <doc_depend>doxygen</doc_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
